Fix z-index again

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+	z-index: -2;
+}
 body, .content {
 	background: rgba(13,13,13,0.9); /* 2B2B2B */
 	color: #fff;
